# memkit

./: .gitattributes  .gitignore  Cargo.toml  README.md  memkit.ts  package.json  tsconfig.build.json
__test__/: index.test.ts
examples/: basic.ts
helpers/: batch.ts  memory.ts  struct.ts  types.ts  watch.ts
src/: lib.rs  test_target.rs
