
[package]
authors = ["deeean <margintop3498@icloud.com>"]
edition = "2021"
name = "memkit"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.3.0", features = ["napi6"] }
napi-derive = "3.2.5"
rayon = "1.10"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
]

[[bin]]
name = "memkit-test-target"
path = "src/test_target.rs"

[build-dependencies]
napi-build = "2.2.3"

[profile.release]
lto = true
strip = "symbols"
